resym_core/tests/snapshots/type_reconstruction__type_reconstruction_no_dependencies-15.snap
---
source: resym_core/tests/type_reconstruction.rs
expression: reconstructed_type
---

class resym_test::SpecializedInterfaceImplClass : resym_test::PureVirtualClassSpecialized { /* Size=0x8 */
  /* 0x0000: fields for resym_test::PureVirtualClassSpecialized */
  
  private: virtual int32_t InterfaceVirtual();
  public: SpecializedInterfaceImplClass(resym_test::SpecializedInterfaceImplClass&);
  public: SpecializedInterfaceImplClass(const resym_test::SpecializedInterfaceImplClass&);
  public: SpecializedInterfaceImplClass();
  public: resym_test::SpecializedInterfaceImplClass& operator=(resym_test::SpecializedInterfaceImplClass&);
  public: resym_test::SpecializedInterfaceImplClass& operator=(const resym_test::SpecializedInterfaceImplClass&);
};

