resym_core/tests/snapshots/type_reconstruction__type_reconstruction_no_dependencies.snap
---
source: resym_core/tests/type_reconstruction.rs
expression: reconstructed_type
---

struct resym_test::PrimitiveTypesTest { /* Size=0x70 */
  /* 0x0000 */ public: bool b1;
  /* 0x0001 */ public: char c1;
  /* 0x0002 */ public: unsigned char c2;
  /* 0x0004 */ public: char16_t c4;
  /* 0x0008 */ public: char32_t c5;
  /* 0x000c */ public: wchar_t w1;
  /* 0x000e */ public: uint16_t i1;
  /* 0x0010 */ public: int16_t i2;
  /* 0x0014 */ public: uint32_t i3;
  /* 0x0018 */ public: int32_t i4;
  /* 0x001c */ public: uint32_t i5;
  /* 0x0020 */ public: int32_t i6;
  /* 0x0028 */ public: uint64_t i7;
  /* 0x0030 */ public: int64_t i8;
  /* 0x0038 */ public: uint64_t i9;
  /* 0x0040 */ public: int64_t i10;
  /* 0x0048 */ public: float f1;
  /* 0x0050 */ public: double f2;
  /* 0x0058 */ public: double f3;
  /* 0x0060 */ public: double f4;
  /* 0x0068 */ public: HRESULT hres;
};

